@@ -1,3 +1,8 @@
+2004-01-31  Michel Guitel  <michel.guitel@free.fr>
+	* doc/gramps-manual/fr/faq.xml: Update.
+	* doc/gramps-manual/fr/gramps-manual.xml: Update.
+	* doc/gramps-manual/fr/usage.xml: Update.
+
 2004-01-31  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/gramps_main.py: better error messages on database write failure
 	* src/WriteXML.py: better error messages on database write failure
